--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,36 @@
-name: Build
+name: Deploy to Swarm (Docker Swarm)
 
 on:
   push:
     branches:
       - main
 
+env:
+  DOCKER_HOST: tcp://<ip-address-of-your-swarm-manager>:2376
+  DOCKER_REGISTRY_USER: <username>
+  DOCKER_REGISTRY_PASS: ${{ secrets.DOCKER_REGISTRY_PASS }}
 
 jobs:
-  build:
-    name: Build
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Create Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: <registry-username>/<image-name>:${{ env.GITHUB_SHA }}
+        username: ${{ env.DOCKER_REGISTRY_USER }}
+        password: ${{ env.DOCKER_REGISTRY_PASS }}
+
+    - name: Deploy to swarm
+      run: |
+        echo "$DOCKER_REGISTRY_PASS" | docker login --username "$DOCKER_REGISTRY_USER" --password-stdin
+        docker stack deploy -c stack.yaml <stack-name>
+      env:
+        DOCKER_HOST: ${{ env.DOCKER_HOST }}
+        DOCKER_TLS_CERTDIR: "/certs"
